fix(apiTab): OPTIONS API overflow tab item

--- a/src/workbench/browser/src/app/pages/api/tab/api-tab.component.scss
+++ b/src/workbench/browser/src/app/pages/api/tab/api-tab.component.scss
@@ -22,6 +22,7 @@
             }
           }
           .ant-tabs-tab-btn {
+            width: 100%;
             font-size: 12px;
             display: flex;
           }
@@ -72,6 +73,7 @@
       }
     }
     .tab-item-container {
+      width: 100%;
       font-style: italic;
       .tab-has-edit-icon {
         width: 8px;
@@ -79,6 +81,7 @@
       }
       .tab-item-button-group {
         position: absolute;
+        height: 100%;
         margin-right: 10px;
         right: 0;
       }
